--- a/client/src/index.html
+++ b/client/src/index.html
@@ -33,5 +33,6 @@
   </head>
   <body class="mat-typography">
     <app-root></app-root>
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
   </body>
 </html>
