Resolve frontend bug preventing confetti after 1st time & minor UI updates
Summary:
  * Fix bug so that confetti can always be triggered each time child completes all habits for the day 
  * Remove top highlight border over active navbar item (because it doesn't switch to active state
consistently when user clicks menu item) 
  * Update qr code for David AR dance 
  * Prevent adding child and adding habit when inputs are empty

Test:
  * Go to http://localhost:3000/home and click Sign In button to see it 'flip' to the new sign in
form...type "1" for Username and click Sign In to sign in.    
  * Navigate through all pages to make sure everything is functioning properly as before including new
UI changes mentioned above

enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit.

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -42,5 +42,34 @@
       type="module"
       src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"
     ></script>
+    <script>
+      // Define a global function for triggering confetti
+      function triggerConfetti() {
+        const colors = ["#d06ab2", "#009aff", "#de768c", "#d358ff"];
+        const end = Date.now() + 15 * 1000;
+
+        (function frame() {
+          confetti({
+            particleCount: 2,
+            angle: 60,
+            spread: 55,
+            origin: { x: 0 },
+            colors: colors,
+          });
+
+          confetti({
+            particleCount: 2,
+            angle: 120,
+            spread: 55,
+            origin: { x: 1 },
+            colors: colors,
+          });
+
+          if (Date.now() < end) {
+            requestAnimationFrame(frame);
+          }
+        })();
+      }
+    </script>
   </body>
 </html>
